force-app/main/default/objects/Job_Position__c/Job_Position__c.object-meta.xml
<CustomObject>
    <label>Job Position</label>
    <nameField>
        <displayFormat>JOB ID-{0000}</displayFormat>
        <label>Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Position</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>