force-app/main/default/objects/Job_Position__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Content Strategist</fullName>
            </value>
            <value>
                <fullName>Digital Marketer</fullName>
            </value>
            <value>
                <fullName>DevOps Engineer</fullName>
            </value>
            <value>
                <fullName>Financial Analyst</fullName>
            </value>
            <value>
                <fullName>HR Executive</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>QA Engineer</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Software Engineer</fullName>
            </value>
            <value>
                <fullName>Technical Support Engineer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>