force-app/main/default/objects/Job_Position__c/validationRules/Experience_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_Positive</fullName>
    <active>true</active>
    <description>Experience Required must be greater than or equal to

0.</description>
    <errorConditionFormula>Experience_Required__c &lt;0</errorConditionFormula>
    <errorMessage>Experience Required must be greater than or equal to

0.</errorMessage>
</ValidationRule>