force-app/main/default/objects/Job_Position__c/validationRules/Hiring_Manager_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Hiring_Manager_Mandatory</fullName>
    <active>true</active>
    <description>Hiring Manager must be selected for Open or On Hold status.</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Status__c, &quot;Open&quot;),
    ISPICKVAL(Status__c, &quot;On Hold&quot;)
  ),
  ISBLANK(Hiring_Manager__c)
)</errorConditionFormula>
    <errorMessage>Hiring Manager must be selected for Open or On Hold 
status
.</errorMessage>
</ValidationRule>