force-app/main/default/objects/Job_Position__c/validationRules/Location_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Mandatory</fullName>
    <active>true</active>
    <description>Ensure Job Location is not blank when Status = Open</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Open&quot;),
  ISBLANK(Job_Location__c)
)</errorConditionFormula>
    <errorMessage>Ensure Job Location is not blank when Status = Open</errorMessage>
</ValidationRule>