force-app/main/default/objects/Job_Position__c/validationRules/Prevent_Closed_Without_Openings.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Closed_Without_Openings</fullName>
    <active>true</active>
    <description>If Status = Closed, then Number of Openings must be 0.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Closed&quot;),
  Number_of_Openings__c &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>Number of Openings must be 0 when the status is Closed</errorMessage>
</ValidationRule>