force-app/main/default/objects/Job_Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Experience_Required__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>