force-app/main/default/objects/Job_Position__c/listViews/Closing_Soon.listView-meta.xml
<ListView>
    <fullName>Closing_Soon</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Closing Soon</label>
</ListView>